openshift/base/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: sample-app
spec:
  to:
    kind: Service
    name: sample-app
  port:
    targetPort: 80
  tls:
    termination: edge
  wildcardPolicy: None
